openapi docs finished user,product,address
finished implementing json schema updates for generating documentation

combined create and update schema code into single files to simplify project structure
